Refactoring: Editor::markAllMisspellingsAndBadGrammarInRanges should be refactored. https://bugs.webkit.org/show_bug.cgi?id=73628

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-12-06
Reviewed by Hajime Morita.

Extracted a code for adding markers and replacing misspelled words from WebCore::Editor::markAllMisspellingsAndBadGrammarInRanges.

No new tests. covered by existing tests.

* editing/Editor.cpp:
(WebCore::Editor::markAllMisspellingsAndBadGrammarInRanges):
  Extracted a code for adding markers and replacing missplled words, and moved to markAndReplaceFor.
(WebCore::Editor::markAndReplaceFor):
* editing/Editor.h:

Canonical link: https://commits.webkit.org/90559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102111 268f45cc-cd09-0410-ab3c-d52691b4dbfc